# strata

./: .env.sample  .gitignore  .gitmodules  .travis.yml  .yarnrc  Anchor.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bootstrap-localnet.sh  bootstrap.ts  deploy.json  lbp_example.js  lerna.json  package-lock.json  package.json  pnpm-lock.yaml  sgovMzp2EWfhtyFqc1TH3pPRydivy9FeavcpYjqERTD.json  strata_keys  strata_keys.pub  tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
.github/actions/anchor-publish/: action.yaml
.github/actions/create-proposal/: action.yaml
.github/actions/deploy-via-governance/: action.yaml
.github/actions/deploy-with-gov-proposal/: action.yaml
.github/actions/setup/: action.yaml
.github/actions/setup-anchor/: action.yaml
.github/actions/setup-solana/: action.yaml
.github/actions/setup-ts/: action.yaml
.github/actions/upload-bpf/: action.yaml
.github/workflows/: canary-release.yaml  create-release-pr.yaml  deploy-bpf.yaml  devnet-proposal.yaml  mainnet-proposal.yaml  publish.yaml  tests.yaml
.husky/: pre-commit
app/: bootstrap.ts  idlToTs.js
docs/: docusaurus.config.js  package.json
docs/docs/: getting_started.md
docs/src/hooks/: programs.ts
docs/src/theme/Playground/: index.js
docs/src/theme/ReactLiveScope/: AsyncButton.tsx  index.js  styles.module.css
docs/src/theme/Root/: index.tsx
migrations/: deploy.ts
programs/chat/: Cargo.toml
programs/chat/src/: error.rs  lib.rs  metadata.rs  state.rs  utils.rs
programs/chat/src/instructions/: approve_chat_identifier_v0.rs  approve_user_identifier_v0.rs  claim_admin_v0.rs  close_chat_permissions_v0.rs  close_chat_v0.rs  initialize_chat_permissions_v0.rs  initialize_chat_v0.rs  initialize_delegate_wallet_v0.rs  initialize_marker_temp.rs  initialize_namespaces_v0.rs  initialize_profile_v0.rs  initialize_settings_v0.rs  mod.rs  send_message_v0.rs  send_token_message_v0.rs  update_chat_v0.rs
programs/chat/src/instructions/initialize_chat/: arg.rs  initialize_chat_v0.rs  initialize_unidentified_chat_v0.rs  mod.rs
programs/chat/src/instructions/send_message/: message.rs  mod.rs  send_native_message_v0.rs  send_token_message_v0.rs
programs/fungible-entangler/: Cargo.toml
programs/fungible-entangler/src/: error.rs  lib.rs  state.rs  util.rs
programs/fungible-entangler/src/instructions/: close_fungible_child_entangler_v0.rs  close_fungible_parent_entangler_v0.rs  initialize_fungible_child_entangler_v0.rs  initialize_fungible_entangler_v0.rs  initialize_fungible_parent_entangler_v0.rs  initialize_token_conjoiner_v0.rs  mod.rs  transfer_child_storage_v0.rs  transfer_parent_storage_v0.rs
programs/fungible-entangler/src/instructions/swap/: account.rs  arg.rs  common.rs  mod.rs  swap_base_v0.rs  swap_child_for_parent_v0.rs  swap_child_v0.rs  swap_parent_for_child_v0.rs  swap_parent_v0.rs  swap_target_v0.rs
programs/spl-bonding-presale/: Cargo.toml  README.md
programs/spl-bonding-presale/src/: lib.rs
programs/spl-token-account-split/: Cargo.toml  README.md
programs/spl-token-account-split/src/: lib.rs
programs/spl-token-bonding/: Cargo.toml
programs/spl-token-bonding/proptest-regressions/: precise_number.txt
programs/spl-token-bonding/src/: account.rs  arg.rs  buy.rs  curve.rs  error.rs  lib.rs  ln.rs  precise_number.rs  sell.rs  signed_precise_number.rs  state.rs  uint.rs  util.rs
programs/spl-token-bonding/src/instructions/: close_curve_v0.rs  close_token_bonding_v0.rs  create_curve_v0.rs  initialize_sol_storage_v0.rs  initialize_token_bonding_v0.rs  mod.rs  update_curve_v0.rs  update_reserve_authority_v0.rs  update_token_bonding_v0.rs
programs/spl-token-bonding/src/instructions/buy/: buy_account_common.rs  buy_arg_common.rs  buy_native_v0.rs  buy_v0.rs  buy_v1.rs  buy_wrapped_sol_v0.rs  common.rs  mod.rs
programs/spl-token-bonding/src/instructions/sell/: common.rs  mod.rs  sell_account_common.rs  sell_arg_common.rs  sell_native_v0.rs  sell_v0.rs  sell_v1.rs  sell_wrapped_sol_v0.rs
programs/spl-token-bonding/src/instructions/transfer_reserves/: mod.rs  transfer_reserves_account_common.rs  transfer_reserves_arg_common.rs  transfer_reserves_native_v0.rs  transfer_reserves_v0.rs
programs/spl-token-collective/: Cargo.toml
programs/spl-token-collective/src/: account.rs  arg.rs  error.rs  lib.rs  name.rs  state.rs  token_metadata.rs  util.rs
programs/spl-token-conjoiner/src/: lib.rs  state.rs
programs/spl-token-conjoiner/src/instructions/: initialize_token_conjoiner_v0.rs  mod.rs
programs/spl-token-conjoiner/src/instructions/swap/: account.rs  arg.rs  swap_base_v0.rs
programs/spl-token-staking/: Cargo.toml  README.md
programs/spl-token-staking/src/: lib.rs  precise_number.rs  uint.rs
programs/spl-wumbo/: Cargo.toml
programs/spl-wumbo/src/: lib.rs  token_metadata.rs
tests/: chat.ts  fungible-entangler.ts  marketplace-sdk.ts  spl-bonding-presale.ts  spl-token-account-split.ts  spl-token-bonding.ts  spl-token-collective.ts  spl-token-staking.ts  spl-wumbo.ts
tests/utils/: chat.ts  clock.ts  token.ts
