[package]
name = "chat"
version = "3.9.2"
description = "Created with Anchor"
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "chat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.24.2"
anchor-spl = "^0.24.2"
namespaces = { version = "4.1.3", features = ["no-entrypoint", "cpi"], git = "https://github.com/cardinal-labs/cardinal-namespaces" }
spl-token = "3.2.0"
mpl-token-metadata = { version = "1.2.4", features = ["no-entrypoint"] }
