[package]
name = "spl-token-conjoiner"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]
create-type = ["cdylib", "lib"]
name = "spl_token_conjoiner"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
anchor-spl = "0.22.0"
uint = "0.9"
spl-token = "3.2.0"

[dev-dependencies]
proptest = "1.0.0"