[package]
name = "spl-bonding-presale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_bonding_presale"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
spl-token-bonding = { path = '../spl-token-bonding', features = ["no-entrypoint", "cpi"] }
anchor-spl = "0.17.0"
"spl-token" = "3.2.0"
