[package]
name = "spl-token-account-split"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_account_split"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.13.2"
anchor-spl = "0.13.2"
"spl-token" = "3.2.0"
spl-token-staking = { path = "../spl-token-staking", features = [ "no-entrypoint" ] }
zeroize = "=1.3.0"