[package]
name = "spl-token-account-split"
version = "0.4.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_account_split"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"

"spl-token" = "3.2.0"
spl-token-staking = { path = "../spl-token-staking", features = [ "no-entrypoint" ] }