[package]
name = "spl-token-bonding"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_bonding"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.15.0"
anchor-spl = "0.15.0"
spl-associated-token-account = { version = "1.0.3",  features = [ "no-entrypoint" ] }
uint = "0.9"
"spl-token" = "3.2.0"

[dev-dependencies]
proptest = "1.0.0"


