[package]
name = "spl-token-bonding"
version = "3.9.2"
description = "Created with Anchor"
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_bonding"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
uint = "=0.9.1"
spl-token = "3.2.0"

[dev-dependencies]
proptest = "1.0.0"


