[package]
name = "spl-token-collective"
version = "0.4.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_collective"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"
uint = "0.9"
spl-token = "3.2.0"
spl-associated-token-account = { version = "1.0.3",  features = [ "no-entrypoint" ] }
spl-name-service = { path = "../../deps/solana-program-library/name-service/program", features = ["no-entrypoint"] }
spl-token-metadata = { path = "../../deps/metaplex/rust/token-metadata/program", features = ["no-entrypoint"] }
spl-token-bonding = { path = '../spl-token-bonding', features = ["no-entrypoint", "cpi"] }
sha2 = "0.9.8"
borsh = "0.9.1"

[dev-dependencies]
proptest = "1.0.0"
