[package]
name = "spl-token-collective"
version = "3.9.2"
description = "Created with Anchor"
edition = "2018"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_collective"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
uint = "=0.9.1"
spl-token = "3.2.0"
spl-associated-token-account = { version = "1.0.3",  features = [ "no-entrypoint" ] }
spl-name-service = { version = "0.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.4", features = ["no-entrypoint"] }
spl-token-bonding = { path = '../spl-token-bonding', version = "3.9.2", features = ["no-entrypoint", "cpi"] }
sha2 = "0.10.2"
borsh = "0.9.1"
arrayref = "0.3.6"

[dev-dependencies]
proptest = "1.0.0"
