[package]
name = "spl-token-staking"
version = "0.4.1"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-associated-token-account = { version = "1.0.3",  features = [ "no-entrypoint" ] }
uint = "0.9"
spl-token = "3.2.0"

[dev-dependencies]
proptest = "1.0.0"
