[package]
name = "spl-wumbo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_wumbo"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.13.2"
anchor-spl = "0.13.2"
uint = "0.9"
zeroize = "=1.3.0"
spl-token = "3.2.0"
spl-associated-token-account = { version = "1.0.3",  features = [ "no-entrypoint" ] }
# spl-name-service = { version = "0.1.0", git = "https://github.com/solana-labs/solana-program-library.git", features = [ "no-entrypoint" ] }
spl-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
spl-token-bonding = { path = '../spl-token-bonding', features = ["no-entrypoint"] }
spl-token-staking = { path = '../spl-token-staking', features = ["no-entrypoint"] }

[dev-dependencies]
proptest = "1.0.0"
